--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="common/handlebars.js"></script>
 		<script src="https://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
 
-    <script type="text/javascript" src="../src/mapsheet.js"></script>
+    <script type="text/javascript" src="src/mapsheet.js"></script>
 
     <script id="popup-template" type="text/x-handlebars-template">
 			<h3>{{Site}}</h3>
