--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="src/mapsheet.js"></script>
 
     <script id="popup-template" type="text/x-handlebars-template">
-			<h3>{{Site}}</h3>
+			<h3>{{Walk_Order}}&" - "&{{Site}}</h3>
 			<p>{{Description}}</p>
 			<p>Cost: {{Cost}}</p>
     </script>
