--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script type="text/javascript">
     	window.onload = function() { init() };
 
-      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1_cYil5oqOSr7XJzZ1-e9lW5iDz6dafqslEbZgKsMKR8/edit#gid=0';
+      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR_TlrZyt4tBNn3MEPN1zIFkB_v-Zr8iOf4k2HCO_656gBgFEYKYn6i1yAml1oT68lNjxLd50XIMmhy/pubhtml';
 	
       function init() {
         Mapsheet( { key: public_spreadsheet_url,
