--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="map" style="height: 500px; width: 600px"></div>
 
-    <script type="text/javascript" src="common/tabletop.js"></script>
+    <script type="text/javascript" src="common/tabletop.min.js"></script>
     <script type="text/javascript" src="common/handlebars.js"></script>
 		<script src="https://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
 
@@ -35,7 +35,7 @@
     <script type="text/javascript">
     	window.onload = function() { init() };
 
-      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vR_TlrZyt4tBNn3MEPN1zIFkB_v-Zr8iOf4k2HCO_656gBgFEYKYn6i1yAml1oT68lNjxLd50XIMmhy/pubhtml';
+      var public_spreadsheet_url = 'https://docs.google.com/spreadsheets/d/1_cYil5oqOSr7XJzZ1-e9lW5iDz6dafqslEbZgKsMKR8/edit?usp=sharing';
 	
       function init() {
         Mapsheet( { key: public_spreadsheet_url,
