--- a/leaflet-with-everything.html
+++ b/leaflet-with-everything.html
@@ -25,7 +25,7 @@
 		<script src="https://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-    <script type="text/javascript" src="../src/mapsheet.js"></script>
+    <script type="text/javascript" src="src/mapsheet.js"></script>
 
     <script id="popup-template" type="text/x-handlebars-template">
 			<h3>{{town}}</h3>
