--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				markerOptions to set a ton of marker options
 		-->
 
-    <div id="map" style="height: 500px; width: 600px"></div>
+    <div id="map" style="height: 600px; width: 100%"></div>
 
     <script type="text/javascript" src="common/tabletop.min.js"></script>
     <script type="text/javascript" src="common/handlebars.js"></script>
