--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 											popupTemplate: "popup-template",
 											provider: Mapsheet.Providers.Leaflet,
 											markerOptions: {
-											icon: new L.AwesomeNumberMarkers({
-                     									number: {{walk_order}}, 
-                      									markerColor: {{hexcolor}},
-										    shadowSize:   [50, 64], // size of the shadow
-										    iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-										    shadowAnchor: [4, 62],  // the same for the shadow
-										    popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
+												iconUrl: 'src/images/markers-soft.png',
+         											number: {{Walk_Order}}, 
+                      										markerColor: {{pincolor}},
+										 		//  shadowSize:   [50, 64], // size of the shadow
+										  		iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
+											 	//   shadowAnchor: [4, 62],  // the same for the shadow
+										  		popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
 											}
 									} );
       }
