--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 											provider: Mapsheet.Providers.Leaflet,
 											markerOptions: {
 												iconUrl: 'src/images/markers-soft.png',
-         											number: {{Walk_Order}}, 
+         											number: {{Order}},
                       										markerColor: {{pincolor}},
 										 		//  shadowSize:   [50, 64], // size of the shadow
 										  		iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
