--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	 <!--[if lte IE 8]>
 	     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
 	 <![endif]-->
-		<link rel="stylesheet" href="src/leaflet_awesome_number_markers.css" />
 	</head>
   <body>
 	
@@ -21,7 +20,6 @@
     <script type="text/javascript" src="common/tabletop.min.js"></script>
     <script type="text/javascript" src="common/handlebars.js"></script>
     <script src="https://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
-    <script type="text/javascript" src="src/leaflet_awesome_number_markers.js"></script>
 	  
     <script type="text/javascript" src="src/mapsheet.js"></script>
 
@@ -42,12 +40,10 @@
 											popupTemplate: "popup-template",
 											provider: Mapsheet.Providers.Leaflet,
 											markerOptions: {
-												iconUrl: 'src/images/markers-soft.png',
-         											// number: {{order}},
-                      										markerColor: {{pincolor}},
-										 		//  shadowSize:   [50, 64], // size of the shadow
+												iconUrl: 'src/images/mymarker.png',
+										 		shadowSize:   [50, 64], // size of the shadow
 										  		iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
-											 	//   shadowAnchor: [4, 62],  // the same for the shadow
+											 	shadowAnchor: [4, 62],  // the same for the shadow
 										  		popupAnchor:  [-3, -76] // point from which the popup should open relative to the iconAnchor
 											}
 									} );
