--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 											popupTemplate: "popup-template",
 											provider: Mapsheet.Providers.Leaflet,
 											markerOptions: {
-												iconUrl: 'src/images/mymarker.png',
+												// iconUrl: 'src/images/mymarker.png',
 										 		shadowSize:   [50, 64], // size of the shadow
 										  		iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
 											 	shadowAnchor: [4, 62],  // the same for the shadow
