--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="src/mapsheet.js"></script>
 
     <script id="popup-template" type="text/x-handlebars-template">
-			<h3>{{Walk_Order}} - {{Site}}</h3>
+			<h3>{{Order}} - {{Site}}</h3>
 			<p>{{Description}}</p>
 			<p>Cost: {{Cost}}</p>
     </script>
