--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         Mapsheet( { key: public_spreadsheet_url,
 											element: "map",
 											popupTemplate: "popup-template",
-											provider: Mapsheet.Providers.Leaflet,
+											provider: Mapsheet.Providers.HikeBike,
 											markerOptions: {
 												// iconUrl: 'src/images/mymarker.png',
 										 		shadowSize:   [50, 64], // size of the shadow
