--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	 <!--[if lte IE 8]>
 	     <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet-0.4/leaflet.ie.css" />
 	 <![endif]-->
+	<link rel="stylesheet" href="dist/leaflet.awesome-markers.css">
 	</head>
   <body>
 	
@@ -20,6 +21,7 @@
     <script type="text/javascript" src="common/tabletop.min.js"></script>
     <script type="text/javascript" src="common/handlebars.js"></script>
     <script src="https://cdn.leafletjs.com/leaflet-0.4.5/leaflet.js"></script>
+    <script src="dist/leaflet.awesome-markers.js"></script>
 	  
     <script type="text/javascript" src="src/mapsheet.js"></script>
 
