--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 										  		iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
 											 	shadowAnchor: [4, 62],  // the same for the shadow
 										  		popupAnchor:  [-3, -76], // point from which the popup should open relative to the iconAnchor
-												html: (Order)
+												html: "Order"
 											}
 									} );
       }
