--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <script type="text/javascript" src="src/mapsheet.js"></script>
 
     <script id="popup-template" type="text/x-handlebars-template">
-			<h3>{{Order}} - {{Site}}</h3>
+			<h3>{{Site}}</h3>
 			<p>{{Description}}</p>
-			<p>Cost: {{Cost}}</p>
+			<p>Cost: {{Cost}}  |  Sequence: {{Order}}</p>
     </script>
 
     <script type="text/javascript">
