--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
  	     // iconSize: [25, 41],
  	     // iconAnchor: [10, 44],
  	     // popupAnchor: [3, -40],
- 	     html: [Order]
+ 	     html: L.Order
 	});
  
 	var marker = new L.marker([lat, long],
