--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 									popupTemplate: "popup-template",
 									provider: Mapsheet.Providers.Leaflet,
 									markerOptions: {
-										iconUrl: 'src/images/mymarker.png',
+										// iconUrl: 'src/images/mymarker.png',
 										shadowSize:   [50, 64], // size of the shadow
 										iconAnchor:   [22, 94], // point of the icon which will correspond to marker's location
 									 	shadowAnchor: [4, 62],  // the same for the shadow
 										popupAnchor:  [-3, -76], // point from which the popup should open relative to the iconAnchor
-										html: 1
+										html: (i+1)
 									}
 								} );
       }
